--- a/gioHang.html
+++ b/gioHang.html
@@ -18,7 +18,7 @@
     <header id="header">
 
 
-        
+
         <div id="noidung-header">
             <nav class="navbartren">
                 <ul class="noidung-navbar-tren-trai">
@@ -244,7 +244,7 @@
                 '                <input type="number" oninput="tinhTienSanPham('+itemGioHang.idSanPham+')" class="soLuong" value="'+ itemGioHang.soLuong +'">  '  + 
                 '                <p class="tongTien">'+ themChamVaoSo(tongTien) +'đ</p>  '  + 
                 '                <div class="hanhDong">  '  + 
-                '                    <i class="fas fa-trash" onclick="onClickNutXoa('+itemGioHang.idSanPham+')"></i>  '  + 
+                '                    <i class="fas fa-trash" onclick="onClickNutXoa('+"\'"+itemGioHang.idSanPham+"\'"+')"></i>  '  + 
                 '                </div>  '  + 
                 '           </div>  ' ; 
             return html;   
