--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="menu">
                     <nav id="nav-bar">
                         <ul class="menu-lv1">
-                            <li class="item-lv1">
+                            <li class="item-lv1 action">
                                 <a href="index.html" class="item-lv1-title">TRANG CHỦ</a>
                             </li>
                             <li class="item-lv1">
