--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                             <img class="thongbao-hinhanh" src="images/5a83ec8ec1bc1ea687fdf9c6e68eee0b.png" alt="">
                             <div class="nhacnho">Đăng nhập để xem thông báo</div>
                             <div class="dangki">
-                                <a href="#">Đăng ký</a>
+                                <a onclick="nodeDangKy()">Đăng ký</a>
                             </div>
                             <div class="dangnhap">
-                                <a href="#">Đăng nhập</a>
+                                <a onclick="nodeDangNhap()">Đăng nhập</a>
                             </div>
                         </div>
                     </li>                    
