--- a/gioHang.html
+++ b/gioHang.html
@@ -14,6 +14,7 @@
     <script src="gioHang.js"></script> 
     <script src="formValidation.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/animations.css">
     <style>
         .error{
             font-size: 12px;
@@ -71,10 +72,10 @@
                             <img class="thongbao-hinhanh" src="images/5a83ec8ec1bc1ea687fdf9c6e68eee0b.png" alt="">
                             <div class="nhacnho">Đăng nhập để xem thông báo</div>
                             <div class="dangki">
-                                <a href="#">Đăng ký</a>
+                                <a onclick="nodeDangKy()">Đăng ký</a>
                             </div>
                             <div class="dangnhap">
-                                <a href="#">Đăng nhập</a>
+                                <a onclick="nodeDangNhap()">Đăng nhập</a>
                             </div>
                         </div>
                     </li>                    
