--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <li class="ndcskh">Trung tâm trợ giúp</li>
                     <li class="ndcskh">ShopSale Mail</li>
                     <li class="ndcskh">ShopSale Blog</li>
-                    <li class="ndcskh">Hưỡng dẫn mua hàng</li>
+                    <li class="ndcskh">Hướng dẫn mua hàng</li>
                     <li class="ndcskh">Vận chuyển</li>
                     <li class="ndcskh">Trả hàng & Hoàn tiền</li>
                     <li class="ndcskh">ShopSale xu</li>
@@ -339,7 +339,7 @@
                 </div>
                 <div class="footer_noiDung_nd3b">
                     <div class="footer_noiDung_header">
-                        <h3>THANH TOÁN</h3>
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQJcQh7g-xkXE8lZ699qf2EykoZ_xPTAkwZmu-0dWtlM8hhfhgi&usqp=CAU" alt="">
                     </div>
                 </div>                
             </div>
