--- a/index.html
+++ b/index.html
@@ -334,8 +334,26 @@
             <div class="footer_noiDung_nd3">
                 <div class="footer_noiDung_nd3a">
                     <div class="footer_noiDung_header">
-                        <h3>ĐƠN VỊ VẬN CHUYỂN</h3>
+                        <h3>NGÂN HÀNG LIÊN KẾT</h3>
                     </div>
+                    <div class="cacnganhang"> 
+                        <div class="cacnganhg">
+                            <img src="images/bidvtt.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/tpank.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/sacombank.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/vietcombanktt.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/sacombank.png" alt=""> 
+                        </div>    
+                    </div>
+                                       
                 </div>
                 <div class="footer_noiDung_nd3b">
                     <div class="footer_noiDung_header">
@@ -364,6 +382,15 @@
                     <a href="#" class="qr_ap_link"><img src="images/759416b55e2bd69ecc360ee2faab7ad0.png" alt="App Store"></a>
                 </div>
             </div>
+        </div>
+        <div class="noidung2">
+            Quốc gia & Khu vực: <span class="nuoc"> Việt Nam </span> | <span class="nuoc">Lào </span> | <span class="nuoc"> Thái Lan </span> | 
+            <span class="nuoc"> Trung Quốc </span> | <span class="nuoc"> Indonesia </span>|<span class="nuoc"> ...</span>
+        </div>
+        <div class="diachishop">
+            <p>Công ty Trách nhiện hữu hạn Một thành viên ShopSale</p>
+            <p>Địa chỉ:  Thành phố Buôn Ma Thuột - tỉnh Đăk Lăk</p>
+            <p>Bản quyền của Công ty TNHHMTV ShopSale</p>
         </div>
     </footer>
 
