footer giỏ hàng

--- a/gioHang.html
+++ b/gioHang.html
@@ -262,8 +262,99 @@
         </div>             
     </main>
     <footer id="footer">
-
+        <div class="footer_noiDung">
+            <div class="footer_noiDung_nd1">
+                <div class="footer_noiDung_header">
+                    <h3>CHĂM SÓC KHÁCH HÀNG</h3>
+                </div>
+                <div class="chamsoc_noidung">
+                    <li class="ndcskh">Trung tâm trợ giúp</li>
+                    <li class="ndcskh">ShopSale Mail</li>
+                    <li class="ndcskh">ShopSale Blog</li>
+                    <li class="ndcskh">Hướng dẫn mua hàng</li>
+                    <li class="ndcskh">Vận chuyển</li>
+                    <li class="ndcskh">Trả hàng & Hoàn tiền</li>
+                    <li class="ndcskh">ShopSale xu</li>
+                    <li class="ndcskh">Chính sách bảo hành</li>
+                    <li class="ndcskh">Chăm sóc khách hàng</li>
+                </div>
+            </div>
+            <div class="footer_noiDung_nd2">
+                <div class="footer_noiDung_header">
+                    <h3>VỀ SHOPSALE</h3>
+                </div>
+                <div class="shopsale_noidung">
+                    <li class="ndcskh">Giới thiệu về ShopSale</li>
+                    <li class="ndcskh">Tuyển dụng</li>
+                    <li class="ndcskh">Điều khoản ShopSale</li>
+                    <li class="ndcskh">Chánh sách bảo mật</li>
+                    <li class="ndcskh">Flash Sales</li>
+                    <li class="ndcskh">Chương trình tiếp thị</li>
+                </div>
+            </div>
+            <div class="footer_noiDung_nd3">
+                <div class="footer_noiDung_nd3a">
+                    <div class="footer_noiDung_header">
+                        <h3>NGÂN HÀNG LIÊN KẾT</h3>
+                    </div>
+                    <div class="cacnganhang"> 
+                        <div class="cacnganhg">
+                            <img src="images/bidvtt.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/tpank.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/sacombank.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/vietcombanktt.png" alt="">
+                        </div>
+                        <div class="cacnganhg">
+                            <img src="images/sacombank.png" alt=""> 
+                        </div>    
+                    </div>
+                                       
+                </div>
+                <div class="footer_noiDung_nd3b">
+                    <div class="footer_noiDung_header">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQJcQh7g-xkXE8lZ699qf2EykoZ_xPTAkwZmu-0dWtlM8hhfhgi&usqp=CAU" alt="">
+                    </div>
+                </div>                
+            </div>
+            <div class="footer_noiDung_nd4">
+                <div class="footer_noiDung_header">
+                    <h3>THEO DÕI CHÚNG TÔI TRÊN</h3>
+                </div>
+                <div class="theodoi_noidung">
+                    <li class="ndcskh"><i class="fab fa-facebook"></i> Facebook</li>
+                    <li class="ndcskh"><i class="fab fa-instagram-square"></i> Instagram</li>
+                </div>
+            </div>
+            <div class="footer_noiDung_nd5">
+                <div class="footer_noiDung_header">
+                    <h3>TẢI ỨNG DỤNG SHOPSALE NGAY THÔI</h3>
+                </div>
+                <div class="qrtai">
+                    <img src="images/f184c0b68a2d385feb5d70a76396230b.png" alt="">
+                </div>
+                <div class="lienketcungqr">
+                    <a href="#" class="qr_ap_link"><img src="images/2679f513b5f9e235adf2c6c288617e7b.png" alt="Google Play"></a>
+                    <a href="#" class="qr_ap_link"><img src="images/759416b55e2bd69ecc360ee2faab7ad0.png" alt="App Store"></a>
+                </div>
+            </div>
+        </div>
+        <div class="noidung2">
+            Quốc gia & Khu vực: <span class="nuoc"> Việt Nam </span> | <span class="nuoc">Lào </span> | <span class="nuoc"> Thái Lan </span> | 
+            <span class="nuoc"> Trung Quốc </span> | <span class="nuoc"> Indonesia </span>|<span class="nuoc"> ...</span>
+        </div>
+        <div class="diachishop">
+            <p>Công ty Trách nhiện hữu hạn Một thành viên ShopSale</p>
+            <p>Địa chỉ:  Thành phố Buôn Ma Thuột - tỉnh Đăk Lăk</p>
+            <p>Bản quyền của Công ty TNHHMTV ShopSale</p>
+        </div>
     </footer>
+
 
         
     <!--Khung đăng nhập và đăng kí-->
