--- a/gioHang.html
+++ b/gioHang.html
@@ -195,7 +195,7 @@
         </div>  
     </header>
     
-    <main id="main-giohang" onclick="">
+    <main id="main-giohang">
         <h1 class="cart-title">
             Sản phẩm bạn đã chọn mua
         </h1>
