--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                     <li class="ndcskh">Giới thiệu về ShopSale</li>
                     <li class="ndcskh">Tuyển dụng</li>
                     <li class="ndcskh">Điều khoản ShopSale</li>
-                    <li class="ndcskh">Chánh sách bảo mật</li>
+                    <li class="ndcskh">Chính sách bảo mật</li>
                     <li class="ndcskh">Flash Sales</li>
                     <li class="ndcskh">Chương trình tiếp thị</li>
                 </div>
