--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
     <main id="main">
         <div id="danh-muc">
             <div class="tieude">
-                <h2><i class="fas fa-list-ul"></i>DANH MỤC</h2>
+                <p class="tieude1"><i class="fas fa-list-ul"></i>Tất cả danh mục</p>
             </div>
             <div class="menudanhmuc">
                 <div class="itm1">
-                    <li class="item-danhmuc"><a href="#"><i class="fas fa-check"></i>Tất cả sản phẩm</a></li>
+                    <li class="item-danhmuc"><a href="#"><i class="fas fa-caret-right"></i>Tất cả sản phẩm</a></li>
                 </div>
                 <div class="itm1">
                     <li class="item-danhmuc2"><a href="#">Điện thoại Nokia</a></li>                    
@@ -226,6 +226,62 @@
                     <li class="item-danhmuc2"><a href="#">Điện thoại Sony</a></li>                    
                 </div>
             </div>
+            <div class="bolocTimkiem">
+                <div class="tieude">
+                    <p class="tieude1"><i class="fas fa-chart-pie"></i>Bộ lọc tìm kiếm</p>
+                </div>
+                <div class="noiban">                    
+                    <div class="menudanhmuc2">
+                        <p class="mucdeban">NƠI BÁN</p>
+                        <div class="itm1">
+                            <li class="item-danhmuc"><a href="#"><i class="fas fa-caret-right"></i>Cả nước</a></li>
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#">Đăk Lăk</a></li>                    
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#">Hà Nội</a></li>                    
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#">Hồ Chí Minh</a></li>                    
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#"><i class="fas fa-sort-down"></i> Xem thêm <i class="fas fa-sort-down"></i></a></li>                    
+                        </div>
+                    </div>
+                    <div class="menudanhmuc3">
+                        <p class="mucdeban">ĐƠN VỊ VẬN CHUYỂN</p>
+                        <div class="itm1">
+                            <li class="item-danhmuc"><a href="#"><i class="fas fa-caret-right"></i>ShopSale 4.0</a></li>
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#">ShopSale Express</a></li>                    
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#">NowShip</a></li>                    
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#">NinjaShip</a></li>                    
+                        </div>
+                        <div class="itm1">
+                            <li class="item-danhmuc2"><a href="#"><i class="fas fa-sort-down"></i> Xem thêm <i class="fas fa-sort-down"></i></a></li>                    
+                        </div>
+                    </div>
+                </div>                
+            </div>
+            <div class="khunggiamua">
+                <div class="tieude">
+                    <p class="tieude1"><i class="fas fa-hand-holding-usd"></i>Khoảng giá</p>
+                </div>
+                <div class="luachongia">
+                    <input class="theThap" type="number" placeholder="Giá thấp">
+                    <div class="nganGiua"></div>
+                    <input class="theCao" type="number" placeholder="Giá cao">
+                </div>
+                <button class="apdung">ÁP DỤNG</button>
+                
+
+            </div>           
         </div>
         <div class="khungphan-sanpham">
             <div class="khungloc-sanpham">
