--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
 
                 <select id="sap-xep" class="btn" onchange="sapXepSanPham()">
                     <option value=""selected>Giá</option>
-                    <option value="giamDan">Giá tăng dần</option>
-                    <option value="tangDan">Giá giảm dần</option>            
+                    <option value="giamDan">Giá giảm dần</option>
+                    <option value="tangDan">Giá tăng dần</option>            
                 </select>
                 <div class="hom-filter_page">
                     <span class="hom-filter_page-num">
