--- a/index.html
+++ b/index.html
@@ -599,13 +599,13 @@
             var danhSachSanPham = localStorage.getItem('danhSachSanPham');
             var danhSachSanPhamSX = taoDoiTuongSanPham().fromJSONs(danhSachSanPham);
 
-            if(cachSapXep = 'tangDan'){
+            if(cachSapXep = 'giamDan'){
                 danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())>(b.tinhGiaBan())? 1 : -1);
                 console.log(danhSachSanPhamSX);
             }
 
-            if(cachSapXep = 'giamDan'){
-                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())<(b.tinhGiaBan())? 1 : -1);
+            if(cachSapXep = 'tangDan'){
+                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())>(b.tinhGiaBan())? -1 : 1);
                 console.log(danhSachSanPhamSX);
             }
             html = chuyenDanhSachDoiTuongSanPhamThanhHTML(danhSachSanPhamSX);
