--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
             }
 
             if(cachSapXep = 'tangDan'){
-                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())<(b.tinhGiaBan())? -1 : 1);
+                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())<(b.tinhGiaBan()));
                 console.log(danhSachSanPhamSX);
             }
             html = chuyenDanhSachDoiTuongSanPhamThanhHTML(danhSachSanPhamSX);
