--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
 
                 <select id="sap-xep" class="btn" onchange="sapXepSanPham()">
                     <option value=""selected>Giá</option>
-                    <option value="tangDan">Giá tăng dần</option>
-                    <option value="giamDan">Giá giảm dần</option>            
+                    <option value="giamDan">Giá giảm dần</option>
+                    <option value="tangDan">Giá tăng dần</option>            
                 </select>
                 <div class="hom-filter_page">
                     <span class="hom-filter_page-num">
@@ -600,12 +600,12 @@
             var danhSachSanPhamSX = taoDoiTuongSanPham().fromJSONs(danhSachSanPham);
 
             if(cachSapXep = 'giamDan'){
-                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())>(b.tinhGiaBan()));
+                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())>(b.tinhGiaBan())? 1 : -1);
                 console.log(danhSachSanPhamSX);
             }
 
             if(cachSapXep = 'tangDan'){
-                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())<(b.tinhGiaBan()));
+                danhSachSanPhamSX.sort((a,b)=> (a.tinhGiaBan())>(b.tinhGiaBan())? -1 : 1);
                 console.log(danhSachSanPhamSX);
             }
             html = chuyenDanhSachDoiTuongSanPhamThanhHTML(danhSachSanPhamSX);
